--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@
     <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print.css" rel="stylesheet" media="print" />
       <script src="javascripts/all.js"></script>
+      <script src='./lib/es6-shim-0.35.1.min.js'></script>
+      <script src='./src/js/example-smart-app.js'></script>
+      <script src='./lib/fhir-client-v0.1.11.js'></script>
+
+      <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
+      <!-- https://github.com/cerner/fhir-client-cerner-additions -->
+      <script src='./lib/fhir-client-cerner-additions-1.0.0.js'></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <script>
+        extractData().then(
+          //Display Patient Demographics and Observations if extractData was success
+          function(p) {
+            drawVisualization(p);
+          },
+
+          //Display 'Failed to call FHIR Service' if extractData failed
+          function() {
+            $('#errors').html('<p> Failed to call FHIR Service </p>');
+          }
+        );
+      </script>
   </head>
 
   <body class="index" data-languages="[&quot;code&quot;]">
