--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'd810f327-0469-4238-b7a1-0b931aa100b8',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/Encounter.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
