--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -65,6 +65,13 @@
           <td id='hdl'></td>
         </tr>
       </table>
+      <h2>Encounter Resource</h2>
+      <table id ="encounter">
+        <tr>
+          <th> Encounter Id </th>
+          <th> Type </th>
+        </tr>
+      </table>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
